css/style.css
/* ... */
#ftco-loader.fullscreen {
  padding: 0;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  background-color: #fff;
  border-radius: 0;
  -webkit-box-shadow: none;
  box-shadow: none; }

#ftco-loader.show {
  -webkit-transition: opacity .4s ease-out, visibility 0s linear 0s;
  -o-transition: opacity .4s ease-out, visibility 0s linear 0s;
  transition: opacity .4s ease-out, visibility 0s linear 0s;
  visibility: visible;
  opacity: 1; }

#ftco-loader .circular {
  -webkit-animation: loader-rotate 2s linear infinite;
  animation: loader-rotate 2s linear infinite;
  position: absolute;
  left: calc(50% - 24px);
  top: calc(50% - 24px);
  display: block;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg); }

#ftco-loader .path {
  stroke-dasharray: 1, 200;
  stroke-dashoffset: 0;
  -webkit-animation: loader-dash 1.5s ease-in-out infinite;
  animation: loader-dash 1.5s ease-in-out infinite;
  stroke-linecap: round; }

@-webkit-keyframes loader-rotate {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg); } }

@keyframes loader-rotate {
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg); } }

@-webkit-keyframes loader-dash {
  0% {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0; }
  50% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -35px; }
  100% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -136px; } }

@keyframes loader-dash {
  0% {
    stroke-dasharray: 1, 200;
    stroke-dashoffset: 0; }
  50% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -35px; }
  100% {
    stroke-dasharray: 89, 200;
    stroke-dashoffset: -136px; } }

.js-fullheight.text-center::-webkit-scrollbar {
      overflow: auto; /* 允许滚动 */
      display: none; /* 隐藏 Chrome 和 Safari 的滚动条 */
      scrollbar-width: none; /* 隐藏 Firefox 的滚动条 */
  }

.name-color {
  color: #ffffff;
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.intro-color{
  color: rgba(255, 255, 255, 1);
  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
}

.navigation-style{
  box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.9);
}

.my-icon {
  font-size: 35px;
  padding: 2%;
}

.hidelist li {
  list-style: none; 
}

.loc-opacity {
  opacity: 0.3;
  font-size: 14px;
}

.no-pointer {
  pointer-events: none;
  margin-right: 45%;
}


.qr-container {
  display: flex; /* 使用 Flexbox 布局 */
  justify-content: center; /* 居中对齐 */
  gap: 20px; /* 图片之间的间距 */
}
.image-box {
  text-align: center; /* 图片和标题居中 */
}
img {
  max-width: 30%; /* 确保图片不会超过容器宽度 */
  height: auto; /* 维持图片的纵横比 */
  display: block; /* 使图片为块级元素 */
}

.gray-line {
  border: none; /* 去掉默认边框 */
  height: 1px; /* 设置线的高度 */
  background-color: rgba(0, 0, 0, 0.08); /* 设置线的颜色 */
  margin: 5% 5% 0% 5%;
}

